--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -1,1 +1,17 @@
+name: Newman Run
 
+on:
+  pull_request:
+    branches:
+    - master
+
+jobs:
+  newman:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - uses: matt-ball/newman-action@master
+        with:
+          apiKey: PMAK-6131967ff364a6004d823969-01bd819144f9dd0574ac94021491c6757b
+          collection: https://www.getpostman.com/collections/394a51e254317901169f
+#           environment: 5922408-228c7edd-fc15-4f68-9665-a35d7df6945b
